--- a/Andres/2_Java/Leccion13-01/estudiantes/src/main/resources/application.properties
+++ b/Andres/2_Java/Leccion13-01/estudiantes/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #evitar que se cree el esquema nuevamente (ddl=data definition language)
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
 
 #Desactivar el tomcat
